# crabtail

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  package.json
.builds/: alpine.yml  ci.yml  deploy.yml  test.yml
asset/sass/: main.scss
asset/sass/base/: typography.scss
asset/sass/components/: all.scss
configs/: Trunk.toml  postcss.config.js  prettierignore
crate/: Makefile.toml
crate/src/: main.rs
cypress/fixtures/: base.json
cypress/integration/: basic.js  default.js  previous_value_swapped.js  swap.js  textarea_state.js  use_preivous_value.js
docs/: credits.md
entries/: index.html
public/: index.html
sass/: main.scss
sass/base/: all.scss  typography.scss
sass/components/: all.scss  buttons.scss
scripts/: postcss_rust_helpers.js
src/: icon.rs  main.rs  transform.rs
