[package]
name = "tail2rs"
version = "0.1.0"
authors = ["azzamsa <me@azzamsa.com>"]
description = "Convert your TailwindCSS class to typed Rust"
categories = ["encoding"]
keywords = ["seed", "tailwind"]
license = "AGPL-3.0-or-later"
readme = "./README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
voca_rs = "1.13.0"
